--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Gerardo Hormiga y Bootcamp210 TT",
   "license": "MIT License",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.2"
